--- a/style.css
+++ b/style.css
@@ -122,9 +122,9 @@ body {
 .fullSum {
     /* display: flex; */
     position: absolute;
-    top: 262px;
+    top: 263px;
     /* left: 89px; */
-    margin-left: 66px;
+    margin-left: 67px;
     /* 66 */
     /* width: 17px; */
     /* background-color: aquamarine; */
@@ -137,8 +137,9 @@ body {
     font-weight: 400;
     font-style: normal;
     font-variation-settings: "wdth" 100;
-    font-size: 6px;
-    letter-spacing: -.2px;
+    font-size: 5px;
+    letter-spacing: 0px;
+    /* margin-left: 5px; */
     /* color: rgb(0, 0, 0); */
 }
 
@@ -158,14 +159,14 @@ body {
     font-weight: 400;
     font-style: normal;
     position: absolute;
-    top: 233px;
+    top: 234px;
     left: 92px;
     /* 69 */
-    letter-spacing: -.5px;
+    letter-spacing: 0px;
     word-spacing: 0px;
     /* background-color: red; */
     z-index: 2;
-    font-size: 6px;
+    font-size: 5px;
 
 }
 
@@ -186,15 +187,15 @@ body {
     font-style: normal;
     font-variation-settings: "wdth" 100;
     position: absolute;
-    top: 243px;
+    top: 244px;
     left: 108px;
     margin-left: 85px;
     /* 85 */
-    letter-spacing: -.3px;
+    /* letter-spacing: -.3px; */
     word-spacing: 0px;
     /* background-color: red; */
     z-index: 2;
-    font-size: 6px;
+    font-size: 5px;
 }
 
 .rahunok {
@@ -336,7 +337,7 @@ body {
 }
 
 .textDescription {
-    left: 766px;
+    left: 764px;
 }
 
 /* 303942 */
